2008-11-27  Claude Paroz  <claude@2xlibre.net>

	* templates/people/person_list.html: Simplify and fix people image
	display.

2008-11-27  Stéphane Raimbault  <stephane.raimbault@gmail.com>

	* people/urls.py: Fixed people list.

2008-11-27  Claude Paroz  <claude@2xlibre.net>

	* media/img/edit.png: Icon for editing.
	* people/urls.py: Add the possibility to display people by username.
	* stats/models.py: New method can_edit_branches for checking permissions.
	Add pre_save check for Branch to verify existence prior to creation.
	* stats/templatetags/stats_extras.py: Custom template filter to join text
	with url, suitable for translatable string without url.
	* templates/module_edit_branches.html:
	* stats/forms.py: 
	* stats/views.py: Template, form and view to edit module branches.
	* templates/base.html: Use new template filter to show connected username
	with link.
	* templates/module.html: Add icon for editing branches. Correct if test.
	* urls.py: URL for new view, and for people username.

2008-11-24  Stéphane Raimbault  <stephane.raimbault@gmail.com>

	* vertimus/models.py: Work in progress.
	* vertimus/tests/__init__.py: Added better unit tests
	* vertimus/workflow_state.py: Removed.

2008-11-22  Claude Paroz  <claude@2xlibre.net>

	* stats/management/commands/update-trans.py: Prevent empty string in
	database-content.py.

2008-11-22  Claude Paroz  <claude@2xlibre.net>

	* README: Add note about translation handling.

2008-11-22  Claude Paroz  <claude@2xlibre.net>

	* README: Add note about OpenID optional support.
	* common/views.py: site_login view handles the login process.
	* media/css/login.css: New css specific to login.html.
	* media/css/main.css: Add errornote style for showing messages.
	* settings_sample.py: Add LOGIN_URL variable (may be used by
	login_required decorator).
	* languages/views.py:
	* stats/views.py:
	* teams/views.py: Use more complete RequestContext to be able to access
	user variable in templates.