@@ -1,0 +1,10 @@
+{% extends "admin/base.html" %}
+{% load i18n %}
+
+{% block title %}{{ title }} | {% trans 'Damned Lies site admin' %}{% endblock %}
+
+{% block branding %}
+<h1 id="site-name"><a href="/">{% trans 'Damned Lies' %}</a></h1>
+{% endblock %}
+
+{% block nav-global %}{% endblock %}
