@@ -1,3 +1,8 @@
+2008-11-30  Stéphane Raimbault  <stephane.raimbault@gmail.com>
+
+	* templates/admin/base_site.html: Link to the Home page and admin
+	interface title.
+
 2008-11-27  Claude Paroz  <claude@2xlibre.net>
 
 	* templates/people/person_list.html: Simplify and fix people image
